# Provn

./: .dockerignore  .env.example  .env.gateway.example  .env.openwebui.example  .gitignore  CLAUDE.md  Makefile  OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml
demo/: quickstart.py
deploy/: Dockerfile  Dockerfile.fips  aws-setup.sh  docker-compose.hybrid.yml  docker-compose.yml
docs/: ARCHITECTURE-DECISIONS.md  COMPLIANCE-EVIDENCE.md  CONFIGURATION.md  EU-AI-ACT-COMPLIANCE.md  FLOW-AND-SOUNDNESS.md  GATEWAY-2-PAGER.md  GATEWAY-REFERENCE.md  GETTING-STARTED.md  HOW-IT-WORKS.md  ISO-42001-COMPLIANCE.md  LLM_API_RESPONSE_FORMATS.md  MARKET-RESEARCH.md  OPEN-WEBUI-INTEGRATION.md  OPENWEBUI-QUICKSTART.md  PRODUCTION_CHECKLIST.md  QUICKSTART.md  SECRETS.md  WIKI-EXECUTIVE-COMPLETE.md  WIKI-EXECUTIVE.md  WIKI-GATEWAY-OVERVIEW.md  enterprise-architecture.html  gateway-chat.html  gateway-workflow.html  how-tools-actually-work.html  phase25-audit-findings-2026-04-17.md  torture-test-findings-2026-04-17.md  walacor-gateway-2pager.html  walacor-gateway-solution-brief.html
proxy/: Dockerfile  go.mod  main.go
scripts/: build_mapper_training_data.py  check_dashboard_placeholders.py  dogfood-agent-tracing.sh  e2e_test.py  export_training_data.py  full_system_test.py  hard_test.py  native-run.sh  native-setup.sh  provision-walacor.sh  pull-and-deploy.sh  qa_critical_test.py  quality_test.py  rotate-key.sh  setup_gpu_instance.sh  setup_walacor_schemas.py  stress_test.py  test-model-capabilities.sh  test-web-search.sh  test_schema_mapper_50.py  train_intent_classifier.py  (+6 more)
(+1237 files in other folders)
